Archive2/96/e6888119065d45/output
main.cpp:13:10: error: no matching function for call to 'processArray'
         processArray(array);// <-- ???
         ^~~~~~~~~~~~
main.cpp:6:10: note: candidate function not viable: no known conversion from 'volatile uint8_t *[16]' to 'const volatile uint8_t **' (aka 'const volatile unsigned char **') for 1st argument
    void processArray(const volatile uint8_t** inputArray) //<--- ????
         ^
1 error generated.
